fix align

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,6 +14,7 @@
     
     &-terms {
         font-size: 13px;
+        cursor: pointer;
     }
 }
 
